chat-fe: fix unreadnotice position on mobile

--- a/pkg/interface/chat/src/css/custom.css
+++ b/pkg/interface/chat/src/css/custom.css
@@ -173,6 +173,10 @@ h2 {
   color: #7ea899;
 }
 
+.unread-notice {
+  top: 48px;
+}
+
 /* responsive */
 
 @media all and (max-width: 34.375em) {
@@ -190,6 +194,9 @@ h2 {
   }
   .embed-container {
     padding-bottom: 56.25%;
+  }
+  .unread-notice {
+    top: 96px;
   }
 }
 
